--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
   "require-dev": {
     "phpunit/phpunit": "^8",
     "squizlabs/php_codesniffer": "3.*",
-    "symfony/yaml": "^5.1"
+    "symfony/yaml": "^5.1",
+    "symfony/browser-kit": "^5.0"
   }
 }
