--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,9 @@
     "squizlabs/php_codesniffer": "3.*",
     "symfony/yaml": "^5.1",
     "symfony/browser-kit": "^5.0"
+  },
+  "suggest": {
+    "ext-redis": "Required if using Redis.",
+    "ext-apc": "Required if using APCu."
   }
 }
