--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -14,6 +14,7 @@ services:
 
     Vdm\Bundle\PrometheusBundle\Monitoring\Collector\:
         resource:  '../../Monitoring/Collector/*'
+        exclude: '../../Monitoring/Collector/*/*'
 
     Vdm\Bundle\PrometheusBundle\Monitoring\CollectorRegistry:
         arguments:
