--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "phpunit/phpunit": "^8",
     "squizlabs/php_codesniffer": "3.*",
     "symfony/yaml": "^5.1",
-    "symfony/browser-kit": "^5.0"
+    "symfony/browser-kit": "^5.0",
+    "symfony/http-kernel": "^5.0"
   },
   "suggest": {
     "ext-redis": "Required if using Redis.",
