--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "squizlabs/php_codesniffer": "3.*",
     "symfony/yaml": "^5.1",
     "symfony/browser-kit": "^5.0",
+    "symfony/http-foundation": "^5.0",
     "symfony/http-kernel": "^5.0"
   },
   "suggest": {
