--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,14 @@
   },
   "require": {
     "php": ">=7.2",
-    "symfony/framework-bundle": "^5.0",
-    "promphp/prometheus_client_php": "^2.0"
+    "symfony/framework-bundle": "^5.4|^6.4",
+    "promphp/prometheus_client_php": "^2"
   },
   "require-dev": {
     "phpunit/phpunit": "^8",
     "squizlabs/php_codesniffer": "3.*",
-    "symfony/yaml": "^5.1",
-    "symfony/browser-kit": "^5.0"
+    "symfony/yaml": "^5.4",
+    "symfony/browser-kit": "^5.4"
   },
   "suggest": {
     "ext-redis": "Required if using Redis.",
